# Chat-bot

./: 01_create_table.py  02_create_db.py  03_split_test_train_database.py  04_train_model.py  05_chat.py  README.md  pyproject.toml
chatbot/: preprocessing.py  services.py
tests/: test_chatbot.py
