[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiofile = "^3.5.0"
aiosqlite = "^0.17.0"
orjson = "^3.5.2"
dask = "^2021.5.1"
dataset = "^1.5.0"
gensim = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
